--- a/style.css
+++ b/style.css
@@ -1,39 +1,35 @@
-body{
-	margin: 0;
-	padding: 0;
+body {
 	vertical-align: baseline;
-	/*font-family: helvetica, arial, sans-serif;
-	font-size: 12px;*/
-	/*color: #333;*/
 	background-image: linear-gradient(rgba(0, 12, 25, 0.5), rgba(255, 2, 0, 0.5)),url("img/img_03.jpg");
 	background-attachment: fixed;
 	margin: 5% auto;
-	/*background: #f2f2f2;*/
-	/*color: #444444;*/
+	padding: auto;
 	color: #f2f2f2;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 1.8;
 	text-shadow: 0 1px 0 #ffffff; max-width: 73%;
 }
-code{
+code {
 	background: white;
 }
-a{
-	border-bottom: 1px solid #f2f2f2; color: #f2f2f2; text-decoration: none;
+a {
+	border-bottom: 1px solid #f2f2f2;
+	color: #f2f2f2;
+	text-decoration: none;
 }
-a:hover{
+a:hover {
 	border-bottom: 0;
 }
 
-div#slider{
+div#galerie {
 	width: 80%;
 	max-width: 500px;
 	overflow: hidden;
 	margin: 10%;
 }
 
-div#slider figure {
+div#galerie figure {
   position: relative;
   width: 500%;
   margin: 0;
@@ -41,16 +37,20 @@ div#slider figure {
   font-size: 0;
   /*left: 0;*/
   text-align: center;
-  animation: 15s slidy infinite;
+  animation: 15s galery infinite;
 }
 
-div#slider figure img{
+div#galerie figure img {
 	width: 20%;
 	height: auto;
 	float: left;
 }
 
-@keyframes slidy {
+#carousel{
+	
+}
+
+@keyframes galery {
   0% { left: 0%; }
   20% { left: 0%; }
   25% { left: -100%; }
@@ -62,7 +62,7 @@ div#slider figure img{
   100% { left: -400%; }
 }
 
-#conteneur{
+#conteneur {
 	background-color: rgba(255, 255, 128, .2);
 	width: 90%;
 	align-content: center;
@@ -71,7 +71,34 @@ div#slider figure img{
 	margin: 5%;
 }
 
-.video{
+.video {
 	width: 80%;
 	margin: 10%;
 }
+
+ul {
+ padding:0;
+ margin:0;
+ list-style-type:none;
+ }
+li {
+ margin-left:2px;
+ float:left; /*pour IE*/
+ }
+ul li a {
+ display:block;
+ float:left;   
+ width:100px;
+ background-color:#6495ED;
+ color:black;
+ text-decoration:none;
+ text-align:center;
+ padding:5px;
+ border:2px solid;
+ /*pour avoir un effet "outset" avec IE :*/
+ border-color:#DCDCDC #696969 #696969 #DCDCDC;
+ }
+ul li a:hover {
+ background-color:#D3D3D3;
+ border-color:#696969 #DCDCDC #DCDCDC #696969;
+ } 
