--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@ body {
 code {
 	background: white;
 }
-a {
+/*a {
 	border-bottom: 1px solid #f2f2f2;
 	color: #f2f2f2;
 	text-decoration: none;
-}
-a:hover {
+}*/
+/*a:hover {
 	border-bottom: 0;
-}
+}*/
 
 div#galerie {
 	width: 80%;
@@ -47,7 +47,7 @@ div#galerie figure img {
 }
 
 #carousel{
-	
+
 }
 
 @keyframes galery {
@@ -80,25 +80,29 @@ ul {
  padding:0;
  margin:0;
  list-style-type:none;
- }
+}
 li {
  margin-left:2px;
  float:left; /*pour IE*/
- }
+}
 ul li a {
- display:block;
- float:left;   
- width:100px;
- background-color:#6495ED;
- color:black;
- text-decoration:none;
- text-align:center;
- padding:5px;
- border:2px solid;
- /*pour avoir un effet "outset" avec IE :*/
- border-color:#DCDCDC #696969 #696969 #DCDCDC;
- }
+	display:block;
+	float:left;   
+	width:100px;
+ 	background-color:#6495ED;
+	/*color:black;*/
+	text-decoration:none;
+	text-align:center;
+	padding:5px;
+	border:2px solid;
+	/*pour avoir un effet "outset" avec IE :*/
+	border-color:#DCDCDC #696969 #696969 #DCDCDC;
+	border-bottom: 1px solid #f2f2f2;
+	color: #f2f2f2;
+	text-decoration: none;
+}
 ul li a:hover {
- background-color:#D3D3D3;
- border-color:#696969 #DCDCDC #DCDCDC #696969;
- } 
+ 	background-color:#D3D3D3;
+ 	border-color:#696969 #DCDCDC #DCDCDC #696969;
+	border-bottom: 0;
+} 
