--- a/style.css
+++ b/style.css
@@ -106,4 +106,11 @@ ul li a:hover {
  	background-color:#D3D3D3;
  	border-color:#696969 #DCDCDC #DCDCDC #696969;
 	border-bottom: 0;
-} 
+}
+
+#bas_page{
+	justify-content: center;
+	width: 100%;
+	margin: auto;
+	padding: auto;
+}
