--- a/style.css
+++ b/style.css
@@ -14,6 +14,39 @@ body {
 code {
 	background: white;
 }
+h1{
+	font-size: 35px;
+	text-align: center;
+}
+ul {
+ padding:0;
+ margin:0;
+ list-style-type:none;
+}
+li {
+ margin-left:2px;
+ float:left;
+}
+ul li a {
+	display:block;
+	float:left;
+	width:100px;
+ 	background-color:#6495ED;
+	text-decoration:none;
+	text-align:center;
+	padding:5px;
+	border:2px solid;
+	border-color:#DCDCDC #696969 #696969 #DCDCDC;
+	border-bottom: 1px solid #f2f2f2;
+	color: #f2f2f2;
+	text-decoration: none;
+}
+ul li a:hover {
+ 	background-color:#D3D3D3;
+ 	border-color:#696969 #DCDCDC #DCDCDC #696969;
+	border-bottom: 0;
+}
+
 /*a {
 	border-bottom: 1px solid #f2f2f2;
 	color: #f2f2f2;
@@ -23,8 +56,54 @@ code {
 	border-bottom: 0;
 }*/
 
-div#galerie {
+
+#conteneur {
+	background-color: rgba(255, 255, 128, .2);
+	width: 90%;
+	align-content: center;
+	text-align: center;
+	border-radius: 5%;
+	/*border-radius: 10% / 50%;*/
+	/*border-radius: 50% 20% / 10% 40%;*/
+	margin: 5%;
+	padding: auto;
+}
+
+#menu{
+	text-align: center;
+	align-content: center;
+	margin: auto;
+	padding: auto;
+
+}
+
+#contenu{
 	width: 80%;
+	align-content: center;
+	margin: auto;
+	padding: auto;
+}
+
+.presentation{
+	width: 80%;
+	margin: auto;
+	padding: auto;
+}
+
+
+.video {
+	width: 80%;
+	margin: 10%;
+}
+
+
+.carousel{
+	width:  100%;
+	margin: 15%;
+}
+
+div#galerie {
+	width: 60%;
 	max-width: 500px;
 	overflow: hidden;
 	margin: 10%;
@@ -46,11 +125,6 @@ div#galerie figure img {
 	height: auto;
 	float: left;
 }
-
-#carousel{
-
-}
-
 @keyframes galery {
   0% { left: 0%; }
   20% { left: 0%; }
@@ -63,59 +137,11 @@ div#galerie figure img {
   100% { left: -400%; }
 }
 
-#conteneur {
-	background-color: rgba(255, 255, 128, .2);
-	width: 90%;
-	align-content: center;
-	border-radius: 5%;
-	/*border-radius: 10% / 50%;*/
-	/*border-radius: 50% 20% / 10% 40%;*/
-	margin: 5%;
-}
-
-.video {
-	width: 80%;
-	margin: 10%;
-}
-
-ul {
- padding:0;
- margin:0;
- list-style-type:none;
-}
-li {
- margin-left:2px;
- float:left;
-}
-ul li a {
-	display:block;
-	float:left;   
-	width:100px;
- 	background-color:#6495ED;
-	text-decoration:none;
-	text-align:center;
-	padding:5px;
-	border:2px solid;
-	border-color:#DCDCDC #696969 #696969 #DCDCDC;
-	border-bottom: 1px solid #f2f2f2;
-	color: #f2f2f2;
-	text-decoration: none;
-}
-ul li a:hover {
- 	background-color:#D3D3D3;
- 	border-color:#696969 #DCDCDC #DCDCDC #696969;
-	border-bottom: 0;
-}
-
 #bas_page{
 	justify-content: center;
-	width: 100%;
+	width: 60%;
 	margin: auto;
 	padding: auto;
 	text-align: center;
-}
-
-h1{
-	font-size: 35px;
-	text-align: center;
+	height:  100px;
 }
